--- a/site/index.html
+++ b/site/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Hello Cousera!</title>
 </head>
-<body>
+<body background="SANKET WALLPAPER.png">
 <h1>Hello Cousera!</h1>
 <h2>How Are You?</h2>
 </body>
