--- a/site/index.html
+++ b/site/index.html
@@ -5,6 +5,6 @@
 </head>
 <body background="SANKET WALLPAPER.png">
 <h1>Hello Cousera!</h1>
-<h2>How Are You?</h2>
+<h2>How Are kzbgg uguuzhudh You?</h2>
 </body>
 </html>
