--- a/site/index.html
+++ b/site/index.html
@@ -3,8 +3,9 @@
 <head>
 	<title>Hello Cousera!</title>
 </head>
-<body background="SANKET WALLPAPER.png">
+<body style="background-color:powderblue;">
 <h1>Hello Cousera!</h1>
-<h2>How Are kzbgg uguuzhudh You?</h2>
+<h2>How AreYou?</h2>
+<h1>kaisan ba???</h1>
 </body>
 </html>
