--- a/site/index.html
+++ b/site/index.html
@@ -3,9 +3,11 @@
 <head>
 	<title>Hello Cousera!</title>
 </head>
-<body style="background-color:powderblue;">
+<body style="background-color:pink;">
 <h1>Hello Cousera!</h1>
 <h2>How AreYou?</h2>
-<h1>kaisan ba???</h1>
+<h1><b>kaisan ba???</b></h1>
+<h1><b><u>how</u></b></h1>
+<h2>mast ba</h2>
 </body>
 </html>
