--- a/site/index.html
+++ b/site/index.html
@@ -4,9 +4,9 @@
   <title>sssdddaaa</title>
 </head>
 <body>
-  <div style="background-image: url(https://venngage-wordpress.s3.amazonaws.com/uploads/2018/09/Colorful-Geometric-Simple-Background-Image.jpg);">
+  <div style="background-image: url(https://venngage-wordpress.s3.amazonaws.com/uploads/2018/09/Colorful-Geometric-Simple-Background-Image.jpg)";>
   <h1 id="top" style="color: gold; text-align:center;font-family:verdana;">Links to Sections of The Same Page</h1>
-  <p><img src="https://www.xda-developers.com/files/2018/06/pubg.jpg" height="430cm" width="640" alt="PUBG MOBLE"></p>
+  <p><img src="https://www.xda-developers.com/files/2018/06/pubg.jpg" height="730cm" width="1480" alt="PUBG MOBLE"></p>
   <section style="color:red; text-align:left; font-family:courier;">
   <ul>
     <li><a href="#S1"><b>S1</b></a></li> 
@@ -37,8 +37,8 @@
   </section>
 </b>
 </div>
-<img src="https://pbs.twimg.com/profile_images/1256631910165630976/kIO2oJrv.jpg" height="480" width="440">
-<img src="https://i.ibb.co/ZKfxq7p/Screenshot-4.png" height="420" width="420">
+<img src="https://pbs.twimg.com/profile_images/1256631910165630976/kIO2oJrv.jpg" height="480" width="540">
+<img src="https://i.ibb.co/ZKfxq7p/Screenshot-4.png" height="480" width="940">
 <footer>
   UnknownCoderX &copy; Copyright 2019
 </footer>
