--- a/site/index.html
+++ b/site/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>sssdddaaa</title>
+  <title>Alas!!!</title>
+<style type="text/css">
+  a:link, a:visited {
+    background-color: gray;
+  }
+  a:hover, a:active {
+    background-color: green;
+  }
+</style>
 </head>
 <body>
   <div style="background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTEua2l_rGVD60B0SXRV9geG4q6Vu7wP_uvaA&usqp=CAU)";>
@@ -39,8 +47,12 @@
 </div>
 <img src="https://pbs.twimg.com/profile_images/1256631910165630976/kIO2oJrv.jpg" height="480" width="540">
 <img src="https://i.ibb.co/ZKfxq7p/Screenshot-4.png" height="480" width="940">
+<hr style="color: black; height:4px; background-color: black">
 <footer>
   UnknownCoderX &copy; Copyright 2019
+  <p>
+   Contact Us&nbsp;:&nbsp;<span style="color: blue" onclick="alert('EMILING US IS USELESS')">&nbsp;unknown@serverisdown.com</span>
+  </p>
 </footer>
 </div>
 </body>
