--- a/kya/kuch bhi.html
+++ b/kya/kuch bhi.html
@@ -10,7 +10,7 @@
     <footer>
       <hr>
       <p style="text-align: center;" 
-         onclick="alert('EMAILING US IS USELESS');">
+         onclick="alert('EMAILING US IS USELESS :)');">
          Tech Support: yeah.right@server-is-down.com
       </p>
     </footer>
