--- a/site/index.html
+++ b/site/index.html
@@ -51,7 +51,7 @@
 <footer>
   UnknownCoderX &copy; Copyright 2019
   <p>
-   Contact Us&nbsp;:&nbsp;<span style="color: blue" onclick="alert('EMILING US IS USELESS')">&nbsp;unknown@serverisdown.com</span>
+   Contact Us&nbsp;:&nbsp;<span style="color: blue" onclick="alert('EMAILING US IS USELESS')">&nbsp;unknown@serverisdown.com</span>
   </p>
 </footer>
 </div>
